k8s/overlays/dev/loja-service/patch.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loja-service
spec:
  replicas: 1
