k8s/overlays/dev/loja-service/patch.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loja-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
