k8s/overlays/dev/loja-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loja-ingress
  namespace: loja
  annotations:
    # Redireciona HTTP para HTTPS no ingress de dev.
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-api.lojacloud.com.br
      secretName: loja-dev-tls
  rules:
    - host: dev-api.lojacloud.com.br
      http:
        paths:
          - path: /api/loja
            pathType: Prefix
            backend:
              service:
                name: loja-service
                port:
                  number: 8080
